syntax = "proto3";
package sensor;

// A truly dynamic map of stringâ†’string.
message Event {
  string nameId       = 1;
  string timestamp    = 2;
  map<string, string> fields      = 3;
  string resourceType = 4;
  string inputType    = 5;
  string projectId    = 6;
}